rename self, id and type to _self, _id, and kind
